# fask_simple_project

./: Makefile  README.md  pyproject.toml
app/: __init__.py  api.py  cli.py  data.py
tests/: test_api.py  test_cli.py
